--- a/styles/course.module.css
+++ b/styles/course.module.css
@@ -8,11 +8,9 @@
     text-align: center;
     text-decoration: none;
     font-size: 16px;
-    border: none;
-    border-radius: 4px;
     cursor: pointer;
   }
   
   .lessonButton:hover {
-    background-color: grey;
+    background-color: lightblue;
   }
